[[bin]]
name = "todotxt_Task_from_str_fuzz"
path = "fuzz_targets/todotxt_Task_from_str_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "toml_ser_to_string_fuzz"
path = "fuzz_targets/toml_ser_to_string_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "toml_de_from_str_fuzz"
path = "fuzz_targets/toml_de_from_str_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ubyte_parse_from_str_fuzz"
path = "fuzz_targets/ubyte_parse_from_str_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wayland_commons_wire_from_raw_fuzz"
path = "fuzz_targets/wayland_commons_wire_from_raw_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tokei_language_language_type_parse_from_slice_fuzz"
path = "fuzz_targets/tokei_language_language_type_parse_from_slice_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vial_request_Request_path_fuzz"
path = "fuzz_targets/vial_request_Request_path_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vial_util_percent_decode_fuzz"
path = "fuzz_targets/vial_util_percent_decode_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vobsub_subtitles_fuzz"
path = "fuzz_targets/vobsub_subtitles_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ws_frame_Frame_parse_fuzz"
path = "fuzz_targets/ws_frame_Frame_parse_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "zip_read_ZipArchive_new_fuzz"
path = "fuzz_targets/zip_read_ZipArchive_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "unicode_segmentation_graphemes_fuzz"
path = "fuzz_targets/unicode_segmentation_graphemes_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "unicode_segmentation_split_word_bounds_fuzz"
path = "fuzz_targets/unicode_segmentation_split_word_bounds_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "url_Url_as_str_fuzz"
path = "fuzz_targets/url_Url_as_str_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "url_Url_parse_fuzz"
path = "fuzz_targets/url_Url_parse_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "uuid_Uuid_parse_str_fuzz"
path = "fuzz_targets/uuid_Uuid_parse_str_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ttf_parser_Face_from_slice_fuzz"
path = "fuzz_targets/ttf_parser_Face_from_slice_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tinytemplate_TinyTemplate_new_fuzz"
path = "fuzz_targets/tinytemplate_TinyTemplate_new_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tinytemplate_TinyTemplate_add_template_fuzz"
path = "fuzz_targets/tinytemplate_TinyTemplate_add_template_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "yaxpeax_x86_long_mode_decode_slice_fuzz"
path = "fuzz_targets/yaxpeax_x86_long_mode_decode_slice_fuzz.rs"
test = false
doc = false
bench = false

[package]
name = "crate_batch_6-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
libfuzzer-sys = "0.4"
todotxt = "0.3.0"
vial = "0.1"
image = "=0.12.2"
nom = "=2.1.0"
wayland-commons = "=0.21.0"

[dev-dependencies]

[target]

[package.metadata]
cargo-fuzz = true

[dependencies.arbitrary]
version = "1.3.0"
features = [ "derive",]

[dependencies.tinytemplate]
git = "https://github.com/bheisler/TinyTemplate"
rev = "522605e"

[dependencies.tokei]
git = "https://github.com/XAMPPRocky/tokei"
rev = "79a9d4c"

[dependencies.toml]
git = "https://github.com/toml-rs/toml-rs"
rev = "7aa2594"

[dependencies.ttf-parser]
git = "https://github.com/harfbuzz/ttf-parser"
rev = "ba4fc75"

[dependencies.ubyte]
git = "https://github.com/SergioBenitez/ubyte"
rev = "c3cfe51"

[dependencies.unicode-segmentation]
git = "https://github.com/unicode-rs/unicode-segmentation"
rev = "4a76978"

[dependencies.url]
git = "https://github.com/servo/rust-url"
rev = "89876ff"

[dependencies.uuid]
git = "https://github.com/uuid-rs/uuid"
rev = "bc7f509"

[dependencies.vobsub]
git = "https://github.com/emk/subtitles-rs"
rev = "7b38b95"

[dependencies.ws]
git = "https://github.com/housleyjk/ws-rs"
rev = "ec5fda6"

[dependencies.yaxpeax-x86]
git = "https://github.com/iximeow/yaxpeax-x86"
rev = "cd98728"

[dependencies.zip]
git = "https://github.com/mvdnes/zip-rs"
rev = "5c12e51"

[dependencies.crate_batch_6]
path = ".."
